Fix alignment issues by making main bar a flexbox

--- a/src/index.css
+++ b/src/index.css
@@ -9,39 +9,81 @@ body {
 }
 
 .app-container {
+  display: flex;
+  flex-direction: column-reverse;
   width: 100%;
   height: 100%;
 }
 
 canvas {
-  z-index: 0;
+  z-index: -1;
+}
+
+#main-bar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  /*margin-right: auto;
+  margin-left: auto;*/
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#app-title {
+  font-family: 'Bungee Shade', cursive;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  font-size: 40px;
+  /*position: fixed;
+  z-index: 1;
+  bottom: 5px;
+  left: 10px;*/
+}
+
+#app-title:hover {
+  cursor: default;
+}
+
+#social-links {
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 30px;
+  /*bottom: 8px;
+  left: 520px;
+  position: fixed;
+  z-index: 1;*/
 }
 
 #ui-controls {
   display: flex;
-  z-index: 1;
-  height: 38px;
+  flex-wrap: wrap;
+  /*flex-flow: wrap;*/
+  /*height: 38px;*/
+  /*z-index: 1;
   position: fixed;
   bottom: 30px;
-  right: 10px;
+  right: 10px;*/
 }
 
 #speed-slider {
-  display: flex;
+  /*display: flex;*/
   /*flex-direction: row-reverse;*/
-  font-weight: lighter;
-  bottom: 10px;
+  /*color: white;*/
+  /*align-items: center;*/
+  /*font-weight: lighter;*/
+  /*bottom: 10px;
   right: 550px;
-  align-items: center;
   position: fixed;
-  z-index: 1;
-  color: white;
+  z-index: 1;*/
 }
 
 button {
+  display: flex;
   font-size: 16px;
   outline: none;
-
   background-color: white;
   border: 2px solid black;
   height: 32px;
@@ -60,42 +102,6 @@ button:hover {
   align-items: center;
 }
 
-#social-links {
-  padding: 10px;
-  border-radius: 5px;
-  bottom: 8px;
-  left: 520px;
-  position: fixed;
-  font-size: 30px;
-  z-index: 1;
-}
-
 .fa {
   color: white;
-}
-
-#app-title {
-  font-family: 'Bungee Shade', cursive;
-  padding: 10px;
-  border-radius: 10px;
-  color: white;
-  position: absolute;
-  z-index: 1;
-  font-size: 40px;
-  bottom: 5px;
-  left: 10px;
-}
-
-#app-title:hover {
-  cursor: default;
-}
-
-#bottom-overlay {
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 0;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 80px;
 }
